--- a/notebooks/01_Primera_exploración.ipynb
+++ b/notebooks/01_Primera_exploración.ipynb
@@ -6678,6 +6678,46 @@
    "source": [
     "Nos quedamos con esta matriz de 12 columnas, con información de barrio y distrito."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El archivo JSON se ha guardado como 'viviendas_EDA_agv.json' en la carpeta 'data/processed'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guardar el DataFrame en un archivo JSON\n",
+    "df2.to_json(\"../data/processed/viviendas_EDA_agv.json\", orient=\"records\", indent=4)\n",
+    "\n",
+    "print(\"El archivo JSON se ha guardado como 'viviendas_EDA_agv.json' en la carpeta 'data/processed'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El archivo CSV se ha guardado como 'viviendas_EDA_agv.csv' en la carpeta 'data/processed'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guardar el DataFrame en un archivo CSV\n",
+    "df2.to_csv(\"../data/processed/viviendas_EDA_agv.csv\", index = False)\n",
+    "\n",
+    "print(\"El archivo CSV se ha guardado como 'viviendas_EDA_agv.csv' en la carpeta 'data/processed'.\")"
+   ]
   }
  ],
  "metadata": {
