--- a/notebooks/02b_Analisis_exploratorio (no duplicates).ipynb
+++ b/notebooks/02b_Analisis_exploratorio (no duplicates).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "viviendas_Madrid = pd.read_csv('../data/processed/viviendas_EDA_noDuplicates_agv.csv', index_col = 'id')\n",
-    "df = viviendas_Madrid.copy()"
+    "viviendas_Madrid_noDup = pd.read_csv('../data/processed/viviendas_EDA_noDuplicates_agv.csv', index_col = 'id')\n",
+    "df = viviendas_Madrid_noDup.copy()"
    ]
   }
  ],
